# adgen

./: .gitignore  README.md  pyproject.toml
.openclaw/: workspace-state.json
adgen/: .gitignore  README.md  __init__.py  cli.py  comfyui.py  llm.py  pipeline.py  postprocess.py  pyproject.toml  setup.py
adgen/adgen/: brand.py  cli.py  comfyui.py  llm.py  pipeline.py  postprocess.py
adgen/docs/: design.md
adgen/tests/: test_pipeline.py
adgen/workflows/: animatediff_video.json  sdxl_ipadapter.json  sdxl_poster.json  wan_i2v_video.json
docs/: SESSION_HANDOFF.md  design.md  issues.md  research.md
tests/: test_fixes.py  test_pipeline.py
